# querygpt

./: .gitignore  README.md  pyproject.toml
examples/: sample_queries.json
src/: embeddings.py  main.py  querygpt.py  utils.py  vector_store.py
src/agents/: column_prune_agent.py  intent_agent.py  sql_generator.py  table_agent.py
src/db/: schema.py  seed.py
