[project]
name = "querygpt"
version = "0.1.0"
requires-python = ">=3.12"
description = "Modular NL-to-SQL pipeline inspired by QueryGPT"


dependencies = [
    "dotenv>=0.9.9",
    "llama-index>=0.12.49",
    "pydantic-ai>=0.4.2",
    "psycopg2-binary",
    "pandas",
    "neo4j",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy"
]

[project.scripts]
querygpt = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"